# exdir

./: MANIFEST.in  README.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: main.yaml
exdir/: __init__.py  attribute.py  base.py  data_set.py  directory.py
src/exdir/: __init__.py  attribute.py  base.py  data_set.py  directory.py
tests/: test_attribute.py  test_base.py  test_data_set.py  test_directory.py
