[metadata]
name = ExDir
version = attr: exdir.__version__
url = https://github.com/robertjoosten/exdir
author = attr: exdir.__author__
author_email = attr: exdir.__author_email__
description = Directory structure standard for experimental pipelines.
long_description = file: README.md
license = MIT
test_suite = tests
tests_require = six
install_requires = six

[options]
python_requires = >=2.7